<resources>
    <string name="app_name">Wallet Stone</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_extract">Extrato</string>
    <string name="title_account">Perfil</string>

    <string name="label_real_sign">R$</string>
    <string name="label_email">Email</string>
    <string name="label_password">Senha</string>
    <string name="label_sign_up">Cadastrar</string>
    <string name="label_sign_in">Entrar</string>
    <string name="label_name">Nome</string>
    <string name="label_sign_out">Sair</string>
    <string name="label_save">Salvar</string>
    <string name="label_zero_value">0,0</string>
    <string name="label_coin">Moeda</string>
    <string name="label_share">Participação</string>
    <string name="label_price">Preço</string>

    <string name="already_have_account">Já tem conta?</string>
    <string name="data_successfully_saved">Dados salvos com sucesso</string>
    <string name="are_you_sure">Deseja realmente sair?</string>
    <string name="not_have_account">Não tem conta?</string>

    <string name="error_all_fields_required">Todos os campos são obrigatórios</string>
    <string name="error_user_already_registered">Usuário já cadastrado</string>
    <string name="error_email_and_or_password_wrong">Usuário e/ou senha incorreto(s)</string>

    <string name="yes">Sim</string>
    <string name="cancel">Cancelar</string>
    <string name="title_trade">Trade</string>
    <string name="label_no_data">Sem dados</string>
    <string name="label_trade_to">Trocar por:</string>
    <string name="label_trade">Efetuar troca</string>
    <string name="error_invalid_quantity">Quantidade inválida</string>
    <string name="label_value_share">Valor participação:</string>
    <string name="label_sub_total">Sub-total:</string>
    <string name="error_invalid_trade">Troca inválida, valor excede sua participação</string>
    <string name="trade_has_been_succssfully">Troca realizada com sucesso</string>
</resources>
